# podscription

./: .gitignore  Makefile  README.md  airflow.sh  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tailwind.config.cjs  vite.config.ts  worker-deploy.sh
airflow/: Dockerfile  requirements.txt  (+1 more)
django/: docker-compose.yaml  pyproject.toml
django/docker/django/: Dockerfile  entry.sh
django/docker/postgres/: init.sh
django/podscription-project/: manage.py  pods.json  requirements.txt
django/podscription-project/api/: admin.py  models.py  schema.py  task_queue.py  task_worker.py  tasks.py  urls.py  utils.py  views.py  views_internal.py
django/podscription-project/api/management/commands/: add_podcast.py  add_podcast_rss.py  podcast-to-rss.py  runapscheduler.py  sanitize-text.py  update_podcast.py
django/podscription-project/api/migrations/: 0001_initial.py  0002_alter_podcastepisode_details_url_and_more.py  0002_podcastepisode_audio_file_path.py  0002_podcastepisode_podcast_name_and_more.py  0003_search_vector_trigger.py  0004_podcastepisode_api_podcast_search__18e659_gin.py  0005_enable_postgres_trigram.py  0006_podcast_active_podcast_description_podcast_logo_url_and_more.py  0007_podcast_slug.py  0008_podcastepisode_slug.py  0009_podcast_api_podcast_slug_b7d4a0_idx_and_more.py  0010_podcastepisode_duration.py  0011_remove_podcastepisode_transcription_and_more.py  0012_rename_grouped_transcription_podcastepisode_transcription.py  0013_podcast_is_rss.py  0014_podcastepisode_whisper_model_size.py  0015_podcastepisode_resolved_audio_url.py  0016_podcastepisode_transcription_full_text.py  0017_search_vector_trigger.py  0018_podcast_hit_counter.py
django/podscription-project/podscription/: asgi.py  celery.py  settings.py  tasks.py  urls.py  views.py  wsgi.py
django/podscription-project/podscription/staticfiles/: staticfiles.json
django/podscription-project/scrapers/: formatters.py  items.py  pipelines.py  settings.py
django/podscription-project/scrapers/spiders/: example.py  google_podcast.py  the_daily_podcast.py
django/podscription-project/static/openapi-templates/: runtime.mustache
django/podscription-project/static/src/: env.d.ts
django/podscription-project/static/src/js/: App.tsx  main.tsx
django/podscription-project/static/src/js/adapters/: runtime.ts
django/podscription-project/templates/: index.html
(+64 files in other folders)
