[tool.poetry]
name = "podscription"
version = "0.1.0"
description = ""
authors = ["Zach Bellay <zachbellay@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scrapy = "^2.7.0"
scrapy-playwright = "^0.0.22"
dateparser = "^1.1.2"
django = "^4.1.3"
psycopg2 = "^2.9.5"
scrapy-djangoitem = "^1.1.1"
aiohttp = "^3.8.3"
whisper = {git = "https://github.com/openai/whisper.git"}


[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
