[tool.poetry]
name = "podscription"
version = "0.1.0"
description = ""
authors = ["Zach Bellay <zachbellay@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.3"
psycopg2 = "^2.9.5"
whitenoise = "^6.2.0"
gunicorn = "^20.1.0"
django-ninja = "^0.19.1"
django-celery-beat = "^2.4.0"
python-dotenv = "^0.21.1"
django-admin-rangefilter = "^0.9.0"
django-vite = "^2.0.2"
django-timezone-field = "^5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"